speech to text working.
